# Ten-Seconds

./: .travis.yml  README.md  build.gradle  google-services.json.enc
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: crypto-engine.c
app/src/main/cpp/include/openssl/: opensslconf.h
app/src/main/java/com/gh0u1l5/tenseconds/api/: Auth.kt  Store.kt
app/src/main/java/com/gh0u1l5/tenseconds/backend/api/: Auth.kt  Store.kt  TaskDecorators.kt
app/src/main/java/com/gh0u1l5/tenseconds/backend/bean/: Account.kt  Identity.kt  OAuthInfo.kt  PasswordSpec.kt
app/src/main/java/com/gh0u1l5/tenseconds/backend/crypto/: ArrayUtils.kt  BiometricUtils.kt  CryptoObjects.kt  CryptoUtils.kt  EraseUtils.kt  MasterKey.kt  RootKey.kt  Scrypt.kt
app/src/main/java/com/gh0u1l5/tenseconds/backend/service/: LockerService.kt
app/src/main/java/com/gh0u1l5/tenseconds/backend/services/: LockerService.kt  SafeZoneService.kt  ServiceUtils.kt
app/src/main/java/com/gh0u1l5/tenseconds/bean/: Account.kt  Identity.kt  PasswordSpec.kt
app/src/main/java/com/gh0u1l5/tenseconds/constant/: CharType.kt
app/src/main/java/com/gh0u1l5/tenseconds/frontend/: UIUtils.kt
app/src/main/java/com/gh0u1l5/tenseconds/frontend/activities/: AppCompatPreferenceActivity.kt  LoginActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/gh0u1l5/tenseconds/frontend/activity/: AppCompatPreferenceActivity.kt  LoginActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/gh0u1l5/tenseconds/frontend/adapter/: IdentityAdapter.kt
app/src/main/java/com/gh0u1l5/tenseconds/frontend/adapters/: AccountAdapter.kt  IdentityAdapter.kt
app/src/main/java/com/gh0u1l5/tenseconds/frontend/fragments/: AddAccountDialogFragment.kt  AddIdentityDialogFragment.kt  BaseDialogFragment.kt  VerifyIdentityDialogFragment.kt
app/src/main/java/com/gh0u1l5/tenseconds/global/: CharType.kt  Constants.kt  TenSecondsApplication.kt
app/src/main/java/com/gh0u1l5/tenseconds/ui/activities/: AppCompatPreferenceActivity.kt  LoginActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: account_line_background.xml  background_white.xml  button_background_tint.xml  ic_add.xml  ic_exit.xml  ic_lock.xml  ic_settings.xml  side_nav_bar.xml
app/src/main/res/drawable-hdpi/: background_light_blue.xml  dark_blue_input_background.xml  grey_input_background.xml
app/src/main/res/layout/: activity_login.xml  app_bar_main.xml  card_identity.xml  content_main.xml  dialog_add_account.xml  dialog_add_identity.xml  dialog_verify_identity.xml  line_account.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: locker_service.xml  pref_generation.xml  pref_headers.xml  safe_zone_service.xml
app/src/test/java/com/gh0u1l5/tenseconds/: ExampleUnitTest.java
app/src/test/java/com/gh0u1l5/tenseconds/backend/crypto/: ArrayUtilsTests.kt  CryptoUtilsTests.kt  EraseUtilsTests.kt
app/src/test/java/com/gh0u1l5/tenseconds/global/: CharTypeTests.kt
gradle/wrapper/: gradle-wrapper.properties
